add special-offers component

--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -8,8 +8,8 @@
 
   .icon-search {
     top: 17px;
-    left: 28px;
-    color: #7c42ec;
+    left: 15px;
+    color: $primary;
   }
   .input-search {
     padding-left: 40px;
@@ -25,8 +25,8 @@
     }
   }
   .icon-filter {
-    right: 24px;
     top: 15px;
+    right: 15px;
     color: #7c42ec;
   }
 }
