--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,7 +1,7 @@
 // variables
 $primary: #7c42ec;
 $secondary: #2E2BF4;
-$input: #F5F5F5;
+$light: #F5F5F5;
 $repairing: #FF9313;
 $painting: #2291FA;
 $laundry: #FBC126;
