--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -29,8 +29,16 @@
     right: 15px;
     color: $primary;
   }
+  @media only screen and (max-width: 992px) {
+    .icon-search {
+      left: 30px;
+    }
+    .icon-filter {
+      right: 30px;
+    }
+  }
 
-  .icon-notification{
+  .icon-notification {
     font-size: 18px;
   }
 }
